--- a/MapBoard.ui
+++ b/MapBoard.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>803</width>
-    <height>587</height>
+    <width>103</width>
+    <height>100</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,13 +18,16 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>791</width>
-     <height>571</height>
+     <width>81</width>
+     <height>81</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="board">
+    <property name="sizeConstraint">
+     <enum>QLayout::SetMinimumSize</enum>
+    </property>
     <property name="spacing">
-     <number>0</number>
+     <number>1</number>
     </property>
    </layout>
   </widget>
