--- a/TheBigWindow.ui
+++ b/TheBigWindow.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Talisman</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>images/talisman-icon.gif</normaloff>images/talisman-icon.gif</iconset>
+  </property>
   <widget class="QPushButton" name="btnRollDie">
    <property name="geometry">
     <rect>
@@ -119,29 +123,6 @@
  by clicking the card: </string>
    </property>
   </widget>
-  <widget class="QTextBrowser" name="instructionBox">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>620</y>
-     <width>801</width>
-     <height>131</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="iLabel">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>600</y>
-     <width>171</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Current Square Instructions:</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="movesLeft">
    <property name="geometry">
     <rect>
@@ -155,22 +136,39 @@
     <string>move 2 more squares</string>
    </property>
   </widget>
-  <widget class="QWidget" name="horizontalLayoutWidget">
+  <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>331</width>
-     <height>291</height>
+     <width>541</width>
+     <height>561</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="bigSquare">
-    <property name="spacing">
-     <number>0</number>
-    </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
     <property name="sizeConstraint">
      <enum>QLayout::SetMinimumSize</enum>
     </property>
+    <item>
+     <layout class="QHBoxLayout" name="bigSquare">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="sizeConstraint">
+       <enum>QLayout::SetMinimumSize</enum>
+      </property>
+     </layout>
+    </item>
+    <item>
+     <widget class="QLabel" name="iLabel">
+      <property name="text">
+       <string>Current Square Instructions:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QTextBrowser" name="instructionBox"/>
+    </item>
    </layout>
   </widget>
  </widget>
